--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logoA.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="app-version" content="2.2.8" />
-    <title>Alejandro</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/logoA.png" />
+  <meta property="og:title" content="Alejandro" />
+  <meta property="og:description"  content="Freelance web para proyectos con alma. Transformo tu idea en una experiencia digital." />
+  <meta property="og:image" content="/logoA.png" />
+  <meta property="og:url" content="https://alejandro.eutecnia.com" />
+  <meta property="og:type" content="website" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="app-version" content="2.2.8" />
+  <title>Alejandro</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
