open graph image

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <link rel="icon" type="image/svg+xml" href="/logoA.png" />
   <meta property="og:title" content="Alejandro" />
   <meta property="og:description"  content="Freelance web para proyectos con alma. Transformo tu idea en una experiencia digital." />
-  <meta property="og:image" content="/logoA.png" />
+  <meta property="og:image" content="https://alejandro.eutecnia.com/og_image.jpg" />
   <meta property="og:url" content="https://alejandro.eutecnia.com" />
   <meta property="og:type" content="website" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="app-version" content="2.2.8" />
+  <meta name="app-version" content="2.3.2" />
   <title>Alejandro</title>
 </head>
 
